# multimodal_quadruped_slam

./: .gitignore  CMakeLists.txt  package.xml
config/: config.yaml  slam.rviz
include/: imu.h  lidar.h  optimizer.h  threaded_queue.h  timestamp_queue.h  utils.h
launch/: slam.launch
msg/: ForwardKinematicChain.msg  ForwardKinematicChainStamped.msg  ForwardKinematicFactor.msg  ForwardKinematicFactorStamped.msg  RigidContactChain.msg  RigidContactChainStamped.msg  RigidContactFactor.msg  RigidContactFactorStamped.msg  biases.msg  lidar_factor.msg
src/: imu.cpp  legged_kinematics.cpp  lidar.cpp  optimizer.cpp  slam.cpp
src/loop_closure/: LoopClosureDL.py  TestDeeperVideo.ipynb  TestVideo.ipynb  loop_closure.py  requirements.txt
