<?xml version="1.0"?>
<package format="2">
  <name>quadruped_slam</name>
  <version>0.1.0</version>
  <description>Robust multi-modal factor graph based 3D PoseSLAM for quadrupeds</description>

  <maintainer email="rahulaggarwal965@gmail.com">Rahul Aggarwal</maintainer>
  <author email="rahulaggarwal965@gmail.com">Rahul Aggarwal</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>gtsam</depend>
  <depend>pinocchio</depend>

  <build_depend>message_generation</build_depend>

</package>
